[tool.poetry]
name = "open-pnp"
version = "0.1.0"
description = ""
authors = ["Emil Vonck <emil.vonck@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask-restx = "^1.3.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
